--- a/SDL Coding/Makefile
+++ b/SDL Coding/Makefile
@@ -10,7 +10,7 @@ CFLAGS := `sdl2-config --libs --cflags` -ggdb3 -O0 --std=c99 -Wall -lSDL2_image 
 HDRS :=
 
 # add source files here
-#SRCS := hello_window.c
+SRCS := Checkers.c
 
 # generate names of object files
 OBJS := $(SRCS:.c=.o)
